# CPP-Homework

./: .gitignore  README.md  hello.asm
asm/: README.md
asm/asm_inlines/: .gitignore  memcpy.cpp  word_counter.cpp
asm/asm_inlines/test_utils/: test_utils.cpp  test_utils.h
asm/asm_inlines/trampoline/: CMakeLists.txt  allocator.cpp  allocator.h  argument_types.h  instructions.asm  main.cpp  trampoline.h
asm/pure_asm/: add.asm  multiply.asm  subtract.asm
cpp/: .gitignore  CMakeLists.txt  README.md  big_integer.cpp  big_integer.h  big_integer_testing.cpp
cpp/big_integer/: CMakeLists.txt  README.md  big_integer.cpp  big_integer.h  big_integer_testing.cpp  optimized_vector.cpp  optimized_vector.h
cpp/big_integer/gtest/: gtest_main.cc
cpp/bind/: bind.h  main.cpp
cpp/checked/: checked.cpp
cpp/either/: either.h  main.cpp
cpp/lru_cache/: CMakeLists.txt  lru-cache.cpp  lru-cache.h  main.cpp
cpp/parser_combinators/: CMakeLists.txt  parser_combinators.hpp  test.cpp
cpp/slab_allocator/: easy_logging.hpp  main.cpp  singleton_slab_allocator.hpp  slab_allocator.hpp  tests.cpp
echo_server/: .gitignore  Doxyfile  echo_server.cpp  main.cpp
echo_server/timeouts/: deadline_container.cpp  deadline_container_tester.cpp  deadline_wrapper.h
echo_server/wrappers/: deadline_client.cpp  deadline_client.h  file_descriptor.cpp  file_descriptor.h  storing_client.h
proxy_server/: .gitignore  CMakeLists.txt  Doxyfile  client_wrapper.cpp  client_wrapper.h  deadline_container.cpp  deadline_container.h  echo_server.cpp  echo_server.h  epoll_wrapper.cpp  main.cpp
proxy_server/timeouts/: deadline_container.cpp  deadline_container.h  deadline_container_tester.cpp  deadline_container_tester.h  deadline_wrapper.h
proxy_server/utils/: server_exception.h  util_functions.cpp  util_functions.h
proxy_server/wrappers/: client_wrapper.cpp  client_wrapper.h  deadline_client.cpp  deadline_client.h  epoll_wrapper.cpp  epoll_wrapper.h  storing_client.cpp
